# python_sv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  ROADMAP.md  SETUP.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  forms-worker.yml  staging.yml
app/: config.py  dependencies.py  main.py  notifications.py
app/routers/: pages.py
app/static/css/: pysv.css  pysv.min.css
app/templates/: calendario.html  codigo-de-conducta.html  error.html  index.html  layout.html
app/templates/partials/: signup_exists.html  signup_success.html
content/: index.md
docs/: SETUP.md  onboarding.md  whatsapp-community-analysis.md
docs/outreach/: venue-proposal.md
presentation/: deck.py  pyproject.toml
presentation/slides/: _deck.py  _theme.py  s01_title.py  s02_about_me.py  s03_agenda.py  s04_why_optimize.py  s05_traditional_vs_ai.py  s06_how_codeflash_works.py  s07_before_after.py  s10_gracias.py
scripts/: add_to_general.py  build_static.py  query_signups.py  send_organizers.py  send_reminder.py
src/python_sv/: config.py  dependencies.py  http.py  main.py  notifications.py
src/python_sv/routers/: admin.py  pages.py  proposals.py  signup.py
src/python_sv/static/css/: pysv.css
src/python_sv/static/js/: cal-i18n.js  coc-i18n.js  i18n.js  index.js
src/python_sv/templates/: calendario.html  codigo-de-conducta.html  error.html  index.html  layout.html  propuestas.html
tests/: conftest.py  test_dependencies.py  test_http.py  test_notifications.py  test_pages.py  test_signup.py
tests/benchmarks/: conftest.py  test_http_clients.py  test_routes.py
workers/forms/: wrangler.toml
workers/forms/src/: index.js
workers/forms/test/: worker.test.mjs
(+4 files in other folders)
