[project]
name = "python-sv"
version = "0.1.0"
description = "Sitio web de la comunidad Python El Salvador"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "jinja2>=3.1",
    "python-frontmatter>=1.1",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
    "markdown>=3.7",
    "motor>=3.6",
    "resend>=2.23.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.11",
]
